changes in the commit

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 ﻿{
-    "connectionString": "mongodb://localhost:27017/test",
+    "connectionString": "mongodb+srv://divyeshpatel:divyesh2198@cluster0.lbp0yva.mongodb.net/test",
     "secret": "@ABC@##@234",
     "emailFrom": "divyesh2198@gmail.com",
     "smtpOptions": {
